SERVER-54047 Resharding permits transactions to commit after minFetchTimestamp without having destined recipient filled in